[package]
name = "mb2-0wire"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
rtt-target = "0.4"

[dependencies.microbit-v2]
path = "/local/src/old/microbit/microbit-v2"

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.led-0wire]
git = "https://github.com/pdx-cs-rust-embedded/led-0wire"
